@@ -1,6 +1,8 @@
 2004-10-17  0.8.1.39  Roland Clobus <rclobus@bigfoot.com>
 	* common/map.h, common/map_query.c: Fixed longest road detection
-	
+	* client/gtk/monopoly.c: No longer uses deprecated calls. Removed
+	frame
+
 2004-10-08  0.8.1.38  Roland Clobus <rclobus@bigfoot.com>
 	* All *.c: Added #include "config.h"
 	* configure.in, ai/ai.c, client/ai/ai.c, client/gtk/connect.c,
